# securepass

./: .gitignore  CONTEXT.md  DEVELOPER.md  DEVELOPER_MANUAL.md  README.md  SECURITY_IMPROVEMENTS.md  TESTING.md  TOTP_FEATURE.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: crypto.test.ts  crypto.ts  main.ts  security.ts  theme.css  types.ts
src-wasm/: Cargo.toml  README.md
src-wasm/src/: lib.rs
src/components/: index.ts
src/components/shared/: BiometricAuth.ts  DuressMode.ts  SetupWizard.ts
src/components/vault/: EntryModal.ts  SecurityDashboard.ts  VaultSidebar.ts  VaultTable.ts  VaultToolbar.ts
src/services/: AutoLockService.test.ts  AutoLockService.ts  BiometricService.ts  VaultUnlockService.test.ts  VaultUnlockService.ts  WasmCryptoService.ts
src/state/: VaultState.test.ts  VaultState.ts
src/utils/: breach-check.ts  clipboard.ts  password.test.ts  password.ts
