[package]
name = "securepass-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Pearl Young"]
description = "SecurePass Wasm Cryptography Core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
argon2 = { version = "0.5.3", features = ["zeroize"] }
aes-gcm = "0.10.3"
getrandom = "0.2.14"
base64 = "0.22.1"
serde = { version = "1.0.203", features = ["derive"] }
zeroize = { version = "1.8.1", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
totp-rs = "5.6.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
